--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,6 @@ nav a {
     bottom: 0;
     top: 0;
     z-index: -1;
-    background-color: white;
+    background-color: var(--background-color);
   }
 }
