--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,24 +1,41 @@
-/* Site-wide styling here */
+@import url("https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&display=swap");
 
 :root {
   --background-color: #ffffff;
   --text-color: #000000;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   background-color: var(--background-color);
   color: var(--text-color);
   margin: auto;
+  font-family: "Inter", sans-serif;
+  font-family: "Open Sans", sans-serif;
+}
+
+.wrapper {
+  min-height: 100vh;
+}
+
+.headerContainer {
+  background-color: var(--background-color);
+  z-index: 100;
+  position: sticky;
+  top: 0;
 }
 
 header {
-  position: sticky;
-  top: 0;
   display: flex;
   padding: 1rem;
   align-items: center;
   justify-content: space-between;
   z-index: 100;
+  max-width: 1200px;
+  margin: auto;
 }
 
 header h1 {
@@ -43,6 +60,7 @@ nav a {
   }
 }
 .navIcon svg {
+  fill: var(--text-color);
   width: 1.5rem;
   height: 1.5rem;
 }
@@ -74,4 +92,34 @@ nav a {
     z-index: -1;
     background-color: var(--background-color);
   }
+}
+
+.clock {
+  padding: 1rem;
+  text-align: center;
+  font-size: 1.1125rem;
+}
+
+footer {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  max-width: 1200px;
+  margin: auto;
+}
+
+a {
+  color: var(--text-color);
+}
+
+footer select,
+footer button {
+  border: 1px solid black;
+  font-size: 1rem;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  background-color: transparent;
+  color: var(--text-color);
 }
